test/classes/deitz/types/type_to_value_error.good
type_to_value_error.chpl:7: warning: unnecessary type construction call
type_to_value_error.chpl:1: note: 'C' has no generic fields
type_to_value_error.chpl:7: note: remove the ()
type_to_value_error.chpl:7: error: illegal assignment of type to value
