test/classes/deitz/types/type_to_value_error.chpl
class C {
  var x: int;
}

var c: borrowed C?;

c = C();

writeln(c);
